add new files with fixed images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Bootstrap Components</title>
+    <title>Web Design Challenge</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"> 
 
@@ -48,7 +48,7 @@
               <br>
              <p class='h3'>Summary: Latitude vs. X</p>
              <br>
-                <img src = "./Resources/assets/images/latitudevtemp.png" height="400">
+                <img src = "https://raw.githubusercontent.com/kgb1983/Web-Design-Challenge/master/Resources/Assets/images/latitudevtemp.png" height="400">
                 <br>
                 <br>
                 <p class="h6">The purpose of this project was to analyze how weather changes as you get closer 
@@ -72,10 +72,10 @@
                 <p class='h3'>Visualizations</p>
                 <br>
                 <br>
-                <img src = "./Resources/assets/images/latitudevtemp.png" height="110">
-                <img src = "./Resources/assets/images/latitudevscloudiness.png" height="110">
-                <img src = "./Resources/assets/images/latitudevshumidity.png" height="110">
-                <img src = "./Resources/assets/images/latitudevswindspeed.png" height="110">
+                <img src = "https://raw.githubusercontent.com/kgb1983/Web-Design-Challenge/master/Resources/Assets/images/latitudevtemp.png" height="110">
+                <img src = "https://raw.githubusercontent.com/kgb1983/Web-Design-Challenge/master/Resources/Assets/images/latitudevscloudiness.png" height="110">
+                <img src = "https://raw.githubusercontent.com/kgb1983/Web-Design-Challenge/master/Resources/Assets/images/latitudevshumidity.png" height="110">
+                <img src = "https://raw.githubusercontent.com/kgb1983/Web-Design-Challenge/master/Resources/Assets/images/latitudevswindspeed.png" height="110">
                 </div> 
               </div>
             </div>
